# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./structures";
 export * from "./sectors";
 export * from "./swales";
 export * from "./clientBriefs";
+export * from "./pathways";
